Add basic implementation of the parser

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <module>fix-parser-codegen</module>
         <module>fix-parser-messages44</module>
         <module>fix-parser-base</module>
-        <!--        <module>fix-parser-impl</module>-->
+        <module>fix-parser-impl</module>
     </modules>
 
     <dependencyManagement>
@@ -59,11 +59,11 @@
                 <artifactId>fix-parser-codegen</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <!--            <dependency>-->
-            <!--                <groupId>fix</groupId>-->
-            <!--                <artifactId>fix-parser-impl</artifactId>-->
-            <!--                <version>${project.version}</version>-->
-            <!--            </dependency>-->
+            <dependency>
+                <groupId>fix</groupId>
+                <artifactId>fix-parser-impl</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
